模块化异步加载方案test

--- a/app/suyun/src/styles/main.a.scss
+++ b/app/suyun/src/styles/main.a.scss
@@ -1,4 +1,5 @@
 body{
-    background-color:red;
+    background-color:blue;
+    backgournd: url('../assets/images/icons.png');
 }
 @import './c.scss';
