--- a/app/suyun/src/views/index.html
+++ b/app/suyun/src/views/index.html
@@ -3,8 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>boli example</title>
+        <!-- <link rel="stylesheet" href="/style/main.a.css" media="screen" title="no title" charset="utf-8"> -->
+        <script src="/js/vendor/vendor.js" charset="utf-8"></script>
     </head>
     <body>
-        <app></app>
+        hello boi
+        <script src="/js/main.a.js" charset="utf-8"></script>
     </body>
 </html>
