实现多级分层命名

--- a/app/suyun/src/views/index.html
+++ b/app/suyun/src/views/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>boi example vue</title>
-        <link rel="stylesheet" href="main.suyun.css">
+        <link rel="stylesheet" href="main.suyun.comment.css">
     </head>
     <body>
         <router-view></router-view>
         <script src="/libs/zepto.min.js" charset="utf-8"></script>
         <script src="/libs/vue.min.js" charset="utf-8"></script>
-        <script src="main.suyun.js"></script>
+        <script src="main.suyun.comment.js"></script>
     </body>
 </html>
