--- a/app/jiazheng/src/views/index.a.html
+++ b/app/jiazheng/src/views/index.a.html
@@ -3,10 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>boli example</title>
-        <link rel="stylesheet" href="main.a.css">
+        <link rel="stylesheet" href="styles/main.a.css">
     </head>
     <body>
         hello boi
-        <script src="main.a.js"></script>
+        <script src="./vendor.js"></script>
+        <script src="libs/require.js"></script>
+        <script src="js/main.a.js"></script>
     </body>
 </html>
