--- a/app/jiazheng/src/views/index.b.html
+++ b/app/jiazheng/src/views/index.b.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="utf-8">
         <title>boli example</title>
-        <link rel="stylesheet" href="main.b.css" media="screen" title="no title" charset="utf-8">
+        <link rel="stylesheet" href="../styles/main.b.css" media="screen" title="no title" charset="utf-8">
     </head>
     <body>
         hello boi
-        <script src="main.b.js"></script>
+        <script src="../js/main.b.js"></script>
     </body>
 </html>
