--- a/amd/src/styles/main.a.scss
+++ b/amd/src/styles/main.a.scss
@@ -1,5 +1,5 @@
 body{
-    background-color:grey;
+    background-color:blue;
     backgournd: url('../assets/images/icons.png');
 }
 @import 'part/part.a.scss';
