--- a/commonjs/src/styles/main.a.scss
+++ b/commonjs/src/styles/main.a.scss
@@ -1,5 +1,5 @@
 body{
-    background-color:blue;
+    background-color:grey;
     backgournd: url('../assets/images/icons.png');
 }
 @import 'part/part.a.scss';
