--- a/commonjs/src/views/index.a.html
+++ b/commonjs/src/views/index.a.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>boli example</title>
-        <link rel="stylesheet" href="main.a.css">
+        <link rel="stylesheet" boi-css='main.a.css' href="main.a.css">
     </head>
     <body>
         hello boi
-        <script src="/libs/require.js" charset="utf-8" data-main="main.a.js"></script>
+        <script src="/libs/require.js"></script>
+        <script boi-js='main.a.js' src="main.a.js"></script>
     </body>
 </html>
